set about text box height

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h1><b style="font-size: 5vw; visibility:hidden; animation-delay: 1s;color: red;" id="imname"
               class="w3-center w3-animate-zoom">MUHAMMAD KASHIF</b></h1>
           <br>
-          <div class="card" id="imabout" style="visibility:hidden; overflow: hidden;">
+          <div class="card" id="imabout" style="visibility:hidden; overflow: hidden;max-height: fit-content;">
             <div class="card-body">
               Web designer and developer from karachi, Pakistan. I create custom websites to help businessess do better
               online. I help designers, small agenicies and businessess bring their ideas to life.
