--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
   <title>M KASHIF</title>
   <style>
+    .textsize{
+      font-size: 100%;
+    }
     @media screen and (max-width: 575px) {
       .firstdiv {
         max-width: 48%;
@@ -23,6 +26,16 @@
 
       .seconddiv {
         max-width: 48%;
+      }
+    }
+    @media screen and (max-width: 330px) {
+      .textsize{
+        font-size: small;
+      }
+    }
+    @media screen and (max-width: 285px) {
+      .textsize{
+        font-size:smaller;
       }
     }
 
@@ -64,10 +77,10 @@
     <div class="collapse navbar-collapse " id="navbarNavDropdown">
       <ul class="navbar-nav ">
         <li class="nav-item active ">
-          <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active ">
-          <a class="nav-link " href="KASHIF CV.pdf" target="_blank">Resume <span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="/KASHIF CV.pdf" target="_blank">Resume <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active ">
           <a class="nav-link " style="cursor: pointer;" target="_blank"
@@ -80,8 +93,8 @@
             Projects
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="OS LAB PROJECT.zip">OS Client-Server Msg</a>
-            <a class="dropdown-item" href="DBMS PROJECT.zip">DBMS Library MS</a>
+            <a class="dropdown-item" href="/OS LAB PROJECT.zip">OS Client-Server Msg</a>
+            <a class="dropdown-item" href="/DBMS PROJECT.zip">DBMS Library MS</a>
           </div>
         </li>
       </ul>
@@ -98,8 +111,8 @@
           <h1><b style="font-size: 5vw; visibility:hidden; animation-delay: 1s;color: red;" id="imname"
               class="w3-center w3-animate-zoom">MUHAMMAD KASHIF</b></h1>
           <br>
-          <div class="card" id="imabout" style="visibility:hidden; overflow: hidden;max-height: fit-content;">
-            <div class="card-body">
+          <div class="card" id="imabout" style="visibility:hidden; overflow: hidden; max-height: fit-content;">
+            <div class="card-body textsize">
               Web designer and developer from karachi, Pakistan. I create custom websites to help businessess do better
               online. I help designers, small agenicies and businessess bring their ideas to life.
             </div>
@@ -120,7 +133,7 @@
 
         <div class="col-sm col-xs col-md col-lg seconddiv">
 
-          <img src="KASHIF_IMAGES.png" class="img-fluid" alt="KASHIF IMAGE">
+          <img src="/KASHIF_IMAGES.png" class="img-fluid" alt="KASHIF IMAGE">
         </div>
       </div>
     </div>
