again remove / for updated code

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <div class="collapse navbar-collapse " id="navbarNavDropdown">
       <ul class="navbar-nav ">
         <li class="nav-item active ">
-          <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active ">
-          <a class="nav-link " href="/KASHIF CV.pdf" target="_blank">Resume <span class="sr-only">(current)</span></a>
+          <a class="nav-link " href="KASHIF CV.pdf" target="_blank">Resume <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active ">
           <a class="nav-link " style="cursor: pointer;" target="_blank"
@@ -93,8 +93,8 @@
             Projects
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/OS LAB PROJECT.zip">OS Client-Server Msg</a>
-            <a class="dropdown-item" href="/DBMS PROJECT.zip">DBMS Library MS</a>
+            <a class="dropdown-item" href="OS LAB PROJECT.zip">OS Client-Server Msg</a>
+            <a class="dropdown-item" href="DBMS PROJECT.zip">DBMS Library MS</a>
           </div>
         </li>
       </ul>
@@ -133,7 +133,7 @@
 
         <div class="col-sm col-xs col-md col-lg seconddiv">
 
-          <img src="/KASHIF_IMAGES.png" class="img-fluid" alt="KASHIF IMAGE">
+          <img src="KASHIF_IMAGES.png" class="img-fluid" alt="KASHIF IMAGE">
         </div>
       </div>
     </div>
