--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <body>
   <!-- Navbar Start -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark text-white bg-dark">
     <a class="navbar-brand">IT SPECIALIST</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
