--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         max-width: 48%;
       }
       .textsize{
-        font-size: 100%;
+        font-size: 3vw;
       }
       .seconddiv {
         max-width: 48%;
@@ -38,6 +38,7 @@
       .textsize{
         font-size:2.8vw;
       }
+      
     }
 
     .bodycontainer {
@@ -77,10 +78,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_blank" href="KASHIF CV.pdf">Resume</a>
+          <a class="nav-link" target="_blank" href="/KASHIF CV.pdf">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" style="cursor: pointer;" target="_blank"
