--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" target="_blank" href="/KASHIF CV.pdf">Resume</a>
+          <a class="nav-link" target="_blank" href="KASHIF CV.pdf">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" style="cursor: pointer;" target="_blank"
